<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    
    
    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        
        <TextView
            android:id="@+id/text_view"
            android:textColor="@color/white"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="80sp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="bottom|end"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>
    
    <LinearLayout
        android:id="@+id/container"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                style="@style/Gray.Button"
                android:onClick="oneNumberClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton

                style="@style/Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="+/-"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="%"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delenie"
                android:onClick="oneOperationClick"
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:text="@string/delenie" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:onClick="oneNumberClick"
                android:id="@+id/btn_seven"
                style="@style/Dark.Gray.Button"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:onClick="oneNumberClick"
                android:id="@+id/btn_eight"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/eight"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                android:onClick="oneNumberClick"
                style="@style/Dark.Gray.Button"
                android:text="@string/nine"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_umnojenie"
                android:onClick="oneOperationClick"
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:text="@string/umnojenie" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:onClick="oneNumberClick"
                android:id="@+id/btn_four"
                style="@style/Dark.Gray.Button"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                android:onClick="oneNumberClick"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/five"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="oneNumberClick"
                android:id="@+id/btn_six"
                style="@style/Dark.Gray.Button"
                android:text="@string/six"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                android:onClick="oneOperationClick"
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:onClick="oneNumberClick"
                android:id="@+id/btn_one"
                style="@style/Dark.Gray.Button"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:onClick="oneNumberClick"
                android:id="@+id/btn_two"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/two"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="oneNumberClick"
                android:id="@+id/btn_three"
                style="@style/Dark.Gray.Button"
                android:text="@string/three"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="oneOperationClick"
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:text="@string/plus" />

        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                android:onClick="oneNumberClick"
                style="@style/Dark.Gray.Button"
                android:layout_width="176dp"
                android:paddingStart="32dp"
                android:textAlignment="textStart"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton

                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/tochka"/>



            <com.google.android.material.button.MaterialButton
                android:onClick="oneOperationClick"
                style="@style/Orange.Button"
                android:id="@+id/btn_ravno"
                android:text="@string/ravno" />

        </LinearLayout>



    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>